# sakura

./: .gitignore  LICENSE.md  README.md  fastSakura.py  install.sh  pyproject.toml  server.ini  server.py
misc/: nginx.conf
ressources/home/: auth.html  home.html  verif.html
src/cerise/: __init__.py  server.py
src/sakura/: __init__.py
src/sakura/db/: UNIAUTH.sql  db_service.py
src/sakura/emptyProject/: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  install.sh  server_sakura.py  server_sakura_ws.py  server_static.py  server_static_orm.py
src/sakura/emptyProject/crons/: exemple.py
src/sakura/emptyProject/static/framework/: navigation.mjs  sakura.mjs  websockets.mjs
src/sakura/emptyProject/static/ws/: config.mjs  config_prod.mjs
src/sakura/http/: baseServer.py  error.py  response.py
src/sakura/mailing/: mailing_service.py
src/sakura/scripts/: install.py  sakura.py  testsRun.py  utils.py
