[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerise"]

[project]
name = "sakura"
version = "0.0.3"
authors = [
    { name="Lou ! ", email="lou@carbonlab.dev" },
]
description = "A wrapper framework for cherry py adding every feature needed for Carbonlab"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cherrypy",
    "configparser",
    "bcrypt",
    "PyJWT"
]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.com/Louciole/sakura"
Issues = "https://gitlab.com/Louciole/sakura/-/issues"