[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sakura"]

[project]
name = "sakura"
version = "1.0.11"
authors = [
    {name="Lou ! ", email="lou@carbonlab.dev" },
]
description = "An extensive web framework adding every feature needed for Carbonlab"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastwsgi",
    "configparser",
    "bcrypt",
    "PyJWT",
    "dkimpy",
    "websockets",
    "multipart",
    "colorama",
    "psycopg"
]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.com/Louciole/sakura"
Issues = "https://gitlab.com/Louciole/sakura/-/issues"

[project.scripts]
sakura = "sakura.scripts.sakura:main"
